# qml-agent-bridge

./: .cursorrules  .gitignore  CMakeLists.txt  README.md
bridge-core/: CMakeLists.txt
bridge-core/include/: InspectorServer.hpp
bridge-core/src/: InspectorServer.cpp
examples/minimal-cpp/: CMakeLists.txt  main.cpp  main.qml
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tools/cli/: CMakeLists.txt  main.cpp
tools/python/: integration_test.py  qab.py  qab_sdk.py  requirements.txt  test_event.py
